2022-10-11 Riccardo Mottola <rm@gnu.org>

	* Source/NSTextView.m
	Fix click on TextAttachmentCells, where the left side was not respected.
	This was because index was respecting fraction and thus loosing the
	attachment when clicking on the right part, only for this case,
	recalculate character index without respectFraction.

2022-09-01 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSButtonCell.m: Move method to detect if button is a
        radio button to this class (- _isRadio)
	* Source/NSButton.m: Add method to check current state of button
        clicked and flip other buttons to off (-_handleRadioStates)

2022-08-27 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSButton.m: Fix to address issue #151, NSRadio button
        behavior on 10.7 should now be implemented.

2022-08-09 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSPredicateEditorRowTemplate.h:
        Add missing constants NSTransformableAttributeType and
        NSObjectIDAttributeType.

2022-06-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImageCell.m,
	* Source/NSAccessibilityCustomAction.m,
	* Source/NSStackView.m,
	* Source/NSGridView.m: Fix compiler warnings

2022-03-31 Riccardo Mottola <rm@gnu.org>

	* Headers/Additions/GNUstepGUI/GSTheme.h
	* Source/GSStandardWindowDecorationView.m
	* Source/GSThemeDrawing.m
	Refactor resize bar notch width to be a constant and private inside
	GSTheme, making it accessible through -[GSTheme resizebarNotchWidth].

2022-03-31 Riccardo Mottola <rm@gnu.org>

	* Source/GSStandardWindowDecorationView.m:
	Fix resizing mode by fixing initialization order.

2022-03-29 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSXibKeyedUnarchiver.h
	* Source/GSXib5KeyedUnarchiver.h
	* Source/GSXib5KeyedUnarchiver.m
	* Source/GSXibKeyedUnarchiver.m: Change format of
        customClass dictionary.

2022-03-26 Gregory John Casamento <greg.casamento@gmail.com>
